--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "scripts": {
+    "dev": "bun run src/index.ts"
+  },
   "devDependencies": {
+    "@biomejs/biome": "2.3.1",
     "@types/bun": "latest"
   },
   "peerDependencies": {
