Add event emitter to DownloadManager
Introduces the 'mitt' library and integrates an event emitter into DownloadManager for download and downloads events. Updates index.ts to render status on downloads event, and extends types to define event payloads. This enables reactive UI updates and better event-driven architecture.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "typescript": "^5"
   },
   "dependencies": {
-    "@clack/prompts": "^0.11.0"
+    "@clack/prompts": "^0.11.0",
+    "mitt": "^3.0.1"
   }
 }
